# sandbox

./: .coveragerc  .dockerignore  .env.test  .gitignore  .release-please-manifest.json  404.html  CHANGELOG.md  CNAME  Dockerfile  Makefile  README.Docker.md  README.md  alembic.ini  compose.yaml  docker-compose.ci.yml  docker-compose.monitoring.yml  docker-compose.yml  index.html  linting.sh  makefile  mkdocs.yml  objects.inv  otel-collecter-config.yml  pyproject.toml  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  sandbox.py  sitemap.xml
.github/: dependabot.yml
.github/workflows/: build_and_push_docker_image.yml  ci.yml  create-branch.yml  create-release-branch.yml  dependabot_update_pr_requirements.yml  docs_dev.yml  documentation.yml  pr-slack-notification.yml  release_please.yml  sandbox.yml  slack-notification.yml  static-analysis.yml  tests.yml
app/: api.py
app/tests/: conftest.py  test_api.py  test_basics.py
backend/: Dockerfile
backend/app/: README.md  mkdocs.yml  pyproject.toml
backend/app/alembic/: env.py
backend/app/app/: __init__.py
backend/app/app/core/: config.py
backend/app/app/db/: base_class.py  session.py
backend/app/app/tests/: test_api.py
backend/app/docs/: index.md
build_and_deploy_docs/: index.html
docker/: entrypoint.sh
docs/: build_and_deploy_docs.md  index.md
sandbox/: main.py  utils.py
search/: search_index.json
tests/: test_greetings.py  test_root.py
