[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = "A sanbox environment for playing arround"
authors = ["David van Buiten <david.vanbuiten@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = {extras = ["standard"], version = "0.115.12"}
pydantic = "2.11.7"
pydantic-settings = "^2.9.1"
django = ">=5.1.7,<6"

[tool.poetry.group.linting.dependencies]
mypy = "^1.16.0"
ruff = "^0.11.13"

[tool.poetry.group.testing.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.2.1"

[tool.poetry.group.documentation.dependencies]
mkdocs-literate-nav = "^0.6.2"
mkdocs-material = "^9.6.14"
mkdocstrings = {extras = ["python"], version = "^0.29.1"}

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # isort
    "I",
]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
strict = true

[tool.coverage.run]
omit = [
  "tests/*",
]
