[tool.poetry]
name = "sandbox"
version = "0.4.1"
description = "My sandbox project"
authors = ["David van Buiten <david.vanbuiten@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
structlog = "^23.2.0"
rich = "^13.7.0"
sqlalchemy = "^2.0.23"
fastapi = "^0.105.0"
pydantic-settings = "^2.1.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.0"
httpx = {extras = ["http2"], version = "^0.25.2"}


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.4.12"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
ruff = "^0.1.7"
mypy-baseline = "^0.6.1"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D107",
    "D200", "D203", "D205", "D213",
    "B905",
    "F401"]
line-length = 120
select = ["B", "D", "E", "F", "I", "N", "Q", "W"]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["app"]


[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.mypy]
strict = true

[tool.pytest.ini_options]
console_output_style = "progress"
addopts = "--cov=app --cov-config=/app/.coveragerc"
